@@ -1,4 +1,4 @@
-python_progs = plotGCvar plotGCProfile plotGCProfileTS plotEISMINT2stats
+python_progs = plotGCvar plotGCProfile plotGCProfileTS plotGCSpotTS plotEISMINT2stats
 bin_SCRIPTS = $(python_progs)
 
 EXTRA_DIST = $(python_progs)
